Finish draft tcl implementation of fbld.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Come up with a more formal test suite for fbld.
 * Fix dependency tracking for configure
   For example, rerun configure if any of the .in files change.
 * See if FbleStack and/or FbleThread can be made abstract.
