Move all of the fbld related stuff into fbld folder.
Because it feels better having it all in one place rather than scattered
around everywhere.

Also, add fbld tests to the ninja check target.

--- a/README.adoc
+++ b/README.adoc
@@ -15,6 +15,7 @@ programming language.
 
 bin/:: Source code for fble compiler binaries.
 book/:: Drafts for a book about the design of the fble language.
+fbld/:: A lightweight document markup language used for documenting fble.
 include/:: Public header files for the fble library.
 lib/:: Source code for an fble interpreter and compiler implemented in C.
 pkgs/:: Sample fble library and application packages.
