--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,11 @@
 * Clean up FbleNewFuncValue API
- - Change signature for FbleRunFunction.
- - Remove FbleSimpleFunc* API.
  - Make FbleStack private.
  - Make FbleThread abstract.
+ - Remove FbleFuncValueExecutable and friends.
+ - Remove FbleSimpleFunc* API.
  - Clean up prior uses of FbleSimpleFunc* API to not make use of global state.
  - Remove include of value.h in generated c programs.
+ - Improve documentation for how to write an FbleRunFunction.
 
 * Fbld Cleanup
  - Come up with a more formal test suite for fbld.
