Use a switch statement for interpreted abort code.
Instead of having separate functions for each instruction. Performance
is not important for abort code. This way is hopefully a little cleaner
and should be easier to remove references to FbleStack.

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,9 @@
  - Clean up prior uses of FbleSimpleFunc* API to not make use of global state.
  - Improve documentation for how to write an FbleRunFunction.
 
+* Fix timeout with gdb-test
+ - Just need to increase it a little in case of heavy CPU load?
+
 * Fbld Cleanup
  - Come up with a more formal test suite for fbld.
  - Print line and column number on fbld usage errors.
