--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
-* Clean up FbleNewFuncValue API
- - Remove FbleSimpleFunc* API.
- - Clean up prior uses of FbleSimpleFunc* API to not make use of global state.
- - Improve documentation for how to write an FbleRunFunction.
+
+* Replace 'locals' with 'args' in FbleRunFunction?
+ - Let functions define and track their own locals?
+
+* Improve documentation for how to write an FbleRunFunction.
+ - Note: users need to FbleReleaseValue on all args before returning!
 
 * Fix timeout with gdb-test
  - Just need to increase it a little in case of heavy CPU load?
