Change FbleReleaseInstr to take multiple values.
It's pretty common to have back-to-back release instructions. Change the
FbleReleaseInstr to take a vector of values to release instead of a
single value.

The main motivation is so the fble-disassemble code looks nicer for the
CompiledCode tutorial, but maybe it will help with performance and
compactness of generated code too.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,8 @@
    args.
  - Draft text of tutorial.
 
+* Add var debug info for statics and locals.
+ - So we can see what each refers to in fble-disassemble output.
 
 * Switch to .fbld format for specs, readmes, and tutorials.
  - For first attempt, do something best effort. Certainly doesn't need to be
