--- a/tutorials/MainDriver-2.adoc
+++ b/tutorials/MainDriver-2.adoc
@@ -167,6 +167,7 @@ the arguments are in the right format:
     if (argc < 3) {
       fprintf(stderr, "usage: hello ARG1 ARG2\n");
       fprintf(stderr, "example: hello 0011 1010\n");
+      FbleFreeValueHeap(heap);
       return 1;
     }
 
