--- a/tutorials/Tutorials.adoc
+++ b/tutorials/Tutorials.adoc
@@ -9,3 +9,12 @@ link:FirstProgram.adoc[]::
 link:MainDriver-1.adoc[]::
   Implement main driver code for your first fble program.
 
+link:MainDriver-2.adoc[]::
+  Add command line arguments to your first fble program.
+
+link:CompiledCode.adoc[]::
+  Compile your fble program to native machine code.
+
+link:IntroToModules.adoc[]::
+  Split your fble program into multiple modules.
+
