Convert FirstProgram tutorial to fbld syntax.
As a first attempt. The tags are not well specified yet, and lots more
quotes need converting.

--- a/tutorials/Tutorials.adoc
+++ b/tutorials/Tutorials.adoc
@@ -3,7 +3,7 @@ Tutorials
 
 The following is a series of tutorials about the fble language:
 
-link:FirstProgram.adoc[]::
+link:FirstProgram.fbld[]::
   Write your first fble program.
 
 link:MainDriver-1.adoc[]::
