--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 
+* Vim syntax doesn't highlight '...' words with newline in them?
+
 * Add var debug info for statics and locals.
  - So we can see what each refers to in fble-disassemble output.
 
