--- a/README.adoc
+++ b/README.adoc
@@ -29,6 +29,7 @@ tutorials/:: Tutorials for getting started with fble.
 To build and run the tests for Fable, the following software is required. The
 version numbers provided are versions that are known to work:
 
+AsciiDoc 8.6.10:: For documentation.
 Doxygen 1.8.13:: For source code documentation.
 Expect 5.45.4:: To test fble debugging.
 GNU Binutils for Debian 2.31.1:: For assembling compiled fble programs.
