Add doxygen config and build target for lib directory.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
 
+* Remove all warnings from lib doxygen
+  Change lib/Doxyfile.in WRAN_AS_ERROR to YES.
+
 * Write new set of tutorials.
   See thoughts/fble.tutorials.txt.
 
