--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,6 @@
 Fable
 =====
+Richard Uhler <ruhler@degralder.com>
 
 Fable is a programming language project. It includes a specification,
 reference implementation, library, and sample applications for the fble
@@ -10,6 +11,24 @@ programming language.
 Fable is a hobby project to design my own programming language. My goal is to
 design a general purpose programming language good enough to be my preferred
 programming language.
+
+== Documentation ==
+
+Fble Language Specification::
+* Source: link:spec/fble.adoc[]
+* Generated: link:spec/fble.html[]
+
+Tutorials::
+* Source: link:tutorials/Tutorials.adoc[]
+* Generated: link:tutorials/Tutorials.html[]
+
+Fble C API::
+* Source: link:include/fble[]
+* Doxygen Generated: link:include/index.html[]
+
+Fble Internals::
+* Source: link:lib/fble[]
+* Doxygen Generated: link:lib/index.html[]
 
 == Directory Structure ==
 
@@ -73,10 +92,3 @@ To install:
 Vim ftplugin, syntax, and indent files for the fble language are available in
 the `spec/vim/` directory. Consult the vim documentation for how to install if
 desired.
-  
-== Next Steps ==
-
-See link:spec/fble.adoc[] for the fble language specification.
-
-See link:tutorials/Tutorials.adoc[] for a series of tutorials about the
-fble language to get started.
