--- a/tutorials/MainDriver-2.adoc
+++ b/tutorials/MainDriver-2.adoc
@@ -143,9 +143,8 @@ that result of evaluating the module:
 ----
 int main(int argc, const char* argv[])
 {
-  FbleSearchPath search_path;
-  FbleVectorInit(search_path);
-  FbleVectorAppend(search_path, ".");
+  FbleSearchPath* search_path = FbleNewSearchPath();
+  FbleSearchPathAppend(search_path, ".");
 
   FbleModulePath* module_path = FbleParseModulePath("/Hello%");
   if (module_path == NULL) {
@@ -156,7 +155,7 @@ int main(int argc, const char* argv[])
   FbleValueHeap* heap = FbleNewValueHeap();
   FbleValue* linked = FbleLinkFromSource(heap, search_path, module_path, NULL);
   FbleFreeModulePath(module_path);
-  FbleVectorFree(search_path);
+  FbleFreeSearchPath(search_path);
 
   if (linked == NULL) {
     FbleFreeValueHeap(heap);
