--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 * Update usage help text with info about FBLE_PACKAGE_PATH, -p, and --package
   options.
-* Update the Install tutorial to use the -p option.
 
-* Install pkgs as part of ninja install and set up default package path.
+* Set up default package path.
+  Based on datadir configuration setting.
 
 * Bug in type inference / type checking?
   If I don't pass a type argument explicitly to the Permutes function in 
