Add info about how to install vim syntax files.
* Update README with commands to run.
* Add section to Install tutorial.
* Move fbld and fble syntax files together to new top level vim/
  directory.
* Add ftdetect scripts for fbld and fble.

--- a/README.adoc
+++ b/README.adoc
@@ -90,5 +90,10 @@ To install:
 == Vim Files ==
 
 Vim ftplugin, syntax, and indent files for the fble language are available in
-the `spec/vim/` directory. Consult the vim documentation for how to install if
-desired.
+the `vim/` directory. You can run the following commands to install these files:
+
+  $ mkdir -p ~/.vim/ftdetect ~/.vim/ftplugin ~/.vim/indent ~/.vim/syntax
+  $ cp vim/ftdetect/* ~/.vim/ftdetect
+  $ cp vim/ftplugin/* ~/.vim/ftplugin
+  $ cp vim/indent/* ~/.vim/indent
+  $ cp vim/syntax/* ~/.vim/syntax
