--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+
 * Update usage help text with info about FBLE_PACKAGE_PATH, -p, and --package
   options.
 
@@ -10,7 +11,7 @@
   it's fine if I give an explicit type. So something funny is up.
 
 * Something is wrong with doxygen build dependencies.
-  It keeps remaking after all I cahnge is .../FannkuchRedux/Tests.fble
+  It keeps remaking after all I change is .../FannkuchRedux/Tests.fble
   That makes no sense. There should be no dependency there at all.
   Unless build.ninja depends on that, and generating build.ninja runs
   configure, which updates Doxyfile?
