--- a/tutorials/Tutorials.adoc
+++ b/tutorials/Tutorials.adoc
@@ -3,18 +3,18 @@ Tutorials
 
 The following is a series of tutorials about the fble language:
 
-link:FirstProgram.fbld[]::
-  Write your first fble program.
+link:Install.fbld[]::
+  Install fble and set up your environment.
 
-link:MainDriver-1.adoc[]::
-  Implement main driver code for your first fble program.
+link:HelloWorld.fbld[]::
+  Write and run a hello world program.
 
-link:MainDriver-2.adoc[]::
-  Add command line arguments to your first fble program.
+link:Basics.fbld[]::
+  Learn about the basics of structs, unions, and functions.
 
-link:CompiledCode.adoc[]::
-  Compile your fble program to native machine code.
+link:Variables.fbld[]::
+  Learn all about variables in fble.
 
-link:Modules.adoc[]::
-  Split your fble program into multiple modules.
+link:Structs.fbld[]::
+  Learn all about structs in fble.
 
