Use @fbld links relative to the source file.
Which makes a lot more sense and is generally much more useful than
having the links be relative to some arbitrary unspecified root
directory.

--- a/README.adoc
+++ b/README.adoc
@@ -20,7 +20,7 @@ Fble Language Specification::
 
 Tutorials::
 * Source: link:tutorials/Tutorials.adoc[]
-* Generated: link:tutorials/Tutorials.html[]
+* Generated: link:tutorials/index.html[]
 
 Fble C API::
 * Source: link:include/fble[]
