--- a/tutorials/Tutorials.adoc
+++ b/tutorials/Tutorials.adoc
@@ -20,3 +20,6 @@ link:Structs.fbld[]::
 
 link:Modules.fbld[]::
   Learn all about modules in fble.
+
+link:Unions.fbld[]::
+  Learn all about unions in fble.
